// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course overview survey item test Grid item closed 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
>
  <div
    className="container status-closed"
  >
    <div
      className="nti-link-to-path"
      to="#"
    >
      <div
        className="target"
      >
        <div
          className="icon-container"
        >
          <div
            className="icon"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
        </div>
        <div
          className="info-container"
        >
          <div
            className="title-container"
          >
            <span
              className="title"
            >
              Survey item 1
            </span>
          </div>
          <div
            className="labels-container"
          >
            <ul
              className="nti-separated-inline-list lesson-overview-survey-label"
            >
              <li>
                <span
                  className="question-count"
                >
                  0 Questions
                </span>
              </li>
              <li>
                <span
                  className="submissions"
                >
                  0 Submissions
                </span>
              </li>
              <li>
                <span
                  className="due"
                >
                  Available Now
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="button-container"
        >
          <span
            className="roundedSmall button primary medium pv-md ph-lg"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Closed
          </span>
        </div>
      </div>
    </div>
    <div
      className="editor-container"
    />
  </div>
</div>
`;

exports[`Course overview survey item test Grid item submitted 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
>
  <div
    className="container status-closed"
  >
    <div
      className="nti-link-to-path"
      to="#"
    >
      <div
        className="target"
      >
        <div
          className="icon-container"
        >
          <div
            className="icon"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
        </div>
        <div
          className="info-container"
        >
          <div
            className="title-container"
          >
            <span
              className="title"
            >
              Survey item 1
            </span>
          </div>
          <div
            className="labels-container"
          >
            <ul
              className="nti-separated-inline-list lesson-overview-survey-label"
            >
              <li>
                <span
                  className="question-count"
                >
                  0 Questions
                </span>
              </li>
              <li>
                <span
                  className="submissions"
                >
                  0 Submissions
                </span>
              </li>
              <li>
                <span
                  className="due"
                >
                  Available Now
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="button-container"
        >
          <span
            className="roundedSmall button primary medium pv-md ph-lg"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Review
          </span>
        </div>
      </div>
    </div>
    <div
      className="editor-container"
    />
  </div>
</div>
`;

exports[`Course overview survey item test Grid item with 3 questions, 4 submissions 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
>
  <div
    className="container status-closed"
  >
    <div
      className="nti-link-to-path"
      to="#"
    >
      <div
        className="target"
      >
        <div
          className="icon-container"
        >
          <div
            className="icon"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
        </div>
        <div
          className="info-container"
        >
          <div
            className="title-container"
          >
            <span
              className="title"
            >
              Survey item 1
            </span>
          </div>
          <div
            className="labels-container"
          >
            <ul
              className="nti-separated-inline-list lesson-overview-survey-label"
            >
              <li>
                <span
                  className="question-count"
                >
                  3 Questions
                </span>
              </li>
              <li>
                <span
                  className="submissions"
                >
                  4 Submissions
                </span>
              </li>
              <li>
                <span
                  className="due"
                >
                  Available Now
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="button-container"
        >
          <span
            className="roundedSmall button primary medium pv-md ph-lg"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Take
          </span>
        </div>
      </div>
    </div>
    <div
      className="editor-container"
    />
  </div>
</div>
`;

exports[`Course overview survey item test Grid item with 5 comments, completable, required, no questions or submissions 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
>
  <div
    className="container status-closed"
  >
    <div
      className="nti-link-to-path"
      to="#"
    >
      <div
        className="target"
      >
        <div
          className="icon-container"
        >
          <div
            className="icon"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
        </div>
        <div
          className="info-container"
        >
          <div
            className="title-container"
          >
            <span
              className="title"
            >
              Survey item 1
            </span>
          </div>
          <div
            className="labels-container"
          >
            <ul
              className="nti-separated-inline-list lesson-overview-survey-label"
            >
              <li>
                <div
                  className="lesson-overview-item-required-label"
                >
                  Required
                </div>
              </li>
              <li>
                <span
                  className="question-count"
                >
                  0 Questions
                </span>
              </li>
              <li>
                <span
                  className="submissions"
                >
                  0 Submissions
                </span>
              </li>
              <li>
                <span
                  className="due"
                >
                  Available Now
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="button-container"
        >
          <span
            className="roundedSmall button primary medium pv-md ph-lg"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Take
          </span>
        </div>
      </div>
    </div>
    <div
      className="editor-container"
    />
  </div>
</div>
`;

exports[`Course overview survey item test Grid item with 5 comments, completable, requirement editable 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-assessment-grid-item"
>
  <div
    className="container status-closed"
  >
    <div
      className="nti-link-to-path"
      to="#"
    >
      <div
        className="target"
      >
        <div
          className="icon-container"
        >
          <div
            className="icon"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
        </div>
        <div
          className="info-container"
        >
          <div
            className="title-container"
          >
            <span
              className="title"
            >
              Survey item 1
            </span>
          </div>
          <div
            className="labels-container"
          >
            <ul
              className="nti-separated-inline-list lesson-overview-survey-label"
            >
              <li>
                <div
                  aria-haspopup="dialog"
                  className="flyout-trigger require-control-value require-control flyout-closed"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  tabIndex={0}
                >
                  <span>
                    Required
                  </span>
                  <i
                    className="icon-chevron-down"
                  />
                </div>
              </li>
              <li>
                <span
                  className="question-count"
                >
                  0 Questions
                </span>
              </li>
              <li>
                <span
                  className="submissions"
                >
                  0 Submissions
                </span>
              </li>
              <li>
                <span
                  className="due"
                >
                  Available Now
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="button-container"
        >
          <span
            className="roundedSmall button primary medium pv-md ph-lg"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            Take
          </span>
        </div>
      </div>
    </div>
    <div
      className="editor-container"
    />
  </div>
</div>
`;

exports[`Course overview survey item test List item closed 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-survey-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              Survey item 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <span
                    className="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    className="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    className="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview survey item test List item submitted 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-survey-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              Survey item 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <span
                    className="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    className="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    className="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview survey item test List item with 3 questions, 4 submissions 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-survey-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              Survey item 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <span
                    className="question-count"
                  >
                    3 Questions
                  </span>
                </li>
                <li>
                  <span
                    className="submissions"
                  >
                    4 Submissions
                  </span>
                </li>
                <li>
                  <span
                    className="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview survey item test List item with 5 comments, completable, required, no questions or submissions 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-survey-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              Survey item 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <div
                    className="lesson-overview-item-required-label"
                  >
                    Required
                  </div>
                </li>
                <li>
                  <span
                    className="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    className="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    className="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview survey item test List item with 5 comments, completable, requirement editable 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-survey-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="lesson-overview-survey-icon"
              />
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              Survey item 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list lesson-overview-survey-label"
              >
                <li>
                  <div
                    className="lesson-overview-item-required-label"
                  >
                    Required
                  </div>
                </li>
                <li>
                  <span
                    className="question-count"
                  >
                    0 Questions
                  </span>
                </li>
                <li>
                  <span
                    className="submissions"
                  >
                    0 Submissions
                  </span>
                </li>
                <li>
                  <span
                    className="due"
                  >
                    Available Now
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
